# mds

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  package-lock.json  spec.md  tsconfig.base.json
.devflow/: release-baseline.md
.devflow/decisions/: decisions.md  pitfalls.md
.devflow/docs/design/: 74-expression-directives.2026-06-04_1307.md  mdl-language-spec-v0.1.2026-05-05.md  mds-js-ecosystem.2026-05-17.md  napi-bindings.2026-05-19_2003.md  tech-debt-refactoring.2026-05-14.md
.devflow/dream/: .curation-last  .decisions-runs-today  .learning-runs-today  .learning-sessions  .processor-spawned-at
.devflow/features/: index.json
.devflow/features/mds-cli/: KNOWLEDGE.md
.devflow/features/mds-compiler/: .refresh-result.json  KNOWLEDGE.md
.features/: index.json
.features/mds-compiler/: .refresh-result.json  KNOWLEDGE.md
.github/workflows/: ci.yml  release.yml
.release/: RELEASE-FLOW.md
crates/mds-cli/: Cargo.toml
crates/mds-core/: Cargo.toml
crates/mds-core/src/: ast.rs  builtins.rs  error.rs  error_tests.rs  evaluator.rs  fs.rs  lib.rs  limits.rs  options.rs  parser.rs  parser_helpers.rs  parser_tests.rs  resolver.rs  scope.rs  validator.rs  value.rs
crates/mds-core/tests/: api_surface.rs  messages.rs  virtual_fs.rs
crates/mds-napi/: Cargo.toml  index.js  package.json
crates/mds-wasm/: Cargo.toml
crates/mds-wasm/src/: lib.rs
crates/mds-wasm/tests/: web.rs
examples/: README.md  node-api-test.mjs
examples/edge-cases/: 16_builtin_string_functions.mds  17_builtin_array_functions.mds  18_builtin_conversion.mds  19_default_arguments.mds  20_logical_operators.mds  21_chaining_builtins.mds  22_combined_v2_features.mds  25_frontmatter_imports.mds
examples/rollup-app/: package.json
examples/stress-test/: node-api-stress-test.mjs
examples/vite-app/: package.json
examples/webpack-app/: package.json
scripts/: bump-version.mjs  write-cjs-package.cjs
src/: ast.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  scope.rs  validator.rs  value.rs
tests/: integration.rs
(+526 files in other folders)
