[package]
name = "mds-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MDS (Markdown Script) compiler — composable LLM prompt templates (library)"
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["template-engine", "text-processing"]

[lib]
name = "mds"

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
